--- a/Admin.html
+++ b/Admin.html
@@ -13,7 +13,7 @@
         <meta name="description" content="Fullscreen Background Image Slideshow with CSS3 - A Css-only fullscreen background image slideshow" />
         <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
         <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="../favicon.ico"> 
+       
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/cover.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
@@ -50,7 +50,7 @@
     <!-- Bootstrap core CSS -->
 
 
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+   
   
 
 
@@ -176,9 +176,8 @@
 
 
     </center>
-        </fieldset>
 
-    <a class="btn"  id= "BTN_CREAR" type="submit">CREAR</a>
+    <a class="btn"  id= "BTN_CREAR" type="submit" value="Crear">CREAR</a>
     <br>
     <br>
     <a class="btn"  id= "BTN_ACTUALIZAR" type="submit">ACTUALIZAR</a>
@@ -189,6 +188,9 @@
     <br>
     <a class="btn" id= "BTN_CONSULTAR" type="submit">CONSULTAR</a>
 
+        </fieldset>
+
+  
    
     </form>
 
@@ -201,8 +203,6 @@
 <!--<script type="text/javascript" src="js/semantic.min.js"></script>
 
 
-
-
-
 -->
+<script src="js/Scrip.js"></script>
 </html>
