--- a/Admin.html
+++ b/Admin.html
@@ -47,7 +47,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
 
-    <!-- Bootstrap core CSS -->
+
 
 
    
@@ -56,7 +56,8 @@
 
 
   </head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" ></script>
+      <!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" ></script>   -->
+
 
     <ul class="cb-slideshow">
       <li><span>Image 01</span><div><h3></h3></div></li>
