Arreglo carpeta log in

--- a/Login.html
+++ b/Login.html
@@ -111,7 +111,7 @@
 
           <div class="group">
 
-          <form class="ui form" action="/cgi-bin/response.py" method="POST">
+          <form class="ui form" action="/cgi-bin/Proyecto_arquitectura/response.py" method="POST">
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="usuario">USUARIO</label></p>
               <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" id="usuario" placeholder="Usuario"></p>
                  
