--- a/Login.html
+++ b/Login.html
@@ -111,7 +111,7 @@
 
           <div class="group">
 
-          <form class="ui form" action="/cgi-bin/Proyecto_arquitectura/response.py" method="POST">
+          <form action="/cgi-bin/Proyecto_arquitectura/response.py" method="POST">
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="usuario">USUARIO</label></p>
               <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" id="usuario" placeholder="Usuario"></p>
                  
@@ -131,7 +131,7 @@
       <input class="btn btn-lg btn-secondary" id="sign up" type="submit" value="Registrar">
       <!--<input class="ui yellow button" id="sign in" type="submit" value="Ingresar">-->
 
-
+    </form>
 
          <!-- <p><input   class="btn btn-lg btn-secondary" id= "BTN" type="submit" value="BUSCAR"></p> -->
         <!--  <a class="btn btn-lg btn-secondary" id= "BTN" type="submit" href="info.html">INGRESAR</a> --> 
