--- a/Login.html
+++ b/Login.html
@@ -113,14 +113,14 @@
 
           <form action="/cgi-bin/Proyecto_arquitectura/response.py" method="POST">
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="usuario">USUARIO</label></p>
-              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" id="usuario" placeholder="Usuario"></p>
+              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" id="nombre" placeholder="Usuario"></p>
                  
             </div>     
             </div>
   
 
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="clave">CONTRASEÑA</label></p>
-              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="password" id="clave" placeholder="Contraseña"></p>
+              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="password" id="contra" placeholder="Contraseña"></p>
                  
                 <br>
                 <br>
@@ -128,7 +128,7 @@
             </div>
 
       </div>
-      <input class="btn btn-lg btn-secondary" id="sign up" type="submit" value="Registrar">
+      <input class="btn btn-lg btn-secondary" id="sign up" type="submit" value="Registrar" href="index.html">
       <!--<input class="ui yellow button" id="sign in" type="submit" value="Ingresar">-->
 
     </form>
