--- a/Login.html
+++ b/Login.html
@@ -113,14 +113,14 @@
 
           <form action="/cgi-bin/Proyecto_arquitectura/response.py" method="POST">
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="usuario">USUARIO</label></p>
-              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" id="nombre" placeholder="Usuario"></p>
+              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="id" name="nombre"id="nombre" placeholder="Usuario"></p>
                  
             </div>     
             </div>
   
 
             <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <label for="clave">CONTRASEÑA</label></p>
-              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="password" id="contra" placeholder="Contraseña"></p>
+              <div data-role = "fieldcontain" class = "ui-hide-label" style="float:left"> <input type="password" name="contra" id="contra" placeholder="Contraseña"></p>
                  
                 <br>
                 <br>
