--- a/index3.html
+++ b/index3.html
@@ -105,6 +105,10 @@
       <div class="login">
         
         <fieldset>
+
+          <p>BIENVENIDO</p>
+
+          <p>NOS ALEGRA MUCHO TENERTE DE VUELTA</p>
           <img src="Imagenes/Logo.png" width="250" height="200">
 
 
@@ -123,7 +127,7 @@
                   <option value="value1">Terror</option> 
                   <option value="value2">Infantil</option>
                   <option value="value3">Drama</option>
-                  <option value="value1">Romatica</option> 
+                  <option value="value1">Romantica</option> 
                   <option value="value2">Ficcion</option>
                   
 
