--- a/index2.html
+++ b/index2.html
@@ -123,7 +123,7 @@
                   <option value="value1">Terror</option> 
                   <option value="value2">Infantil</option>
                   <option value="value3">Drama</option>
-                  <option value="value1">Romatica</option> 
+                  <option value="value1">Romantica</option> 
                   <option value="value2">Ficcion</option>
                   
 
